# music-internal

./: Makefile  go.mod  go.sum
app/interface/main/user/cmd/: BUILD.bazel  main.go
app/interface/main/user/dao/: dao.go  user.go
app/interface/main/user/model/: banner.go  user.go
app/interface/main/user/model/chat/: friend.go  message.go
app/interface/main/user/model/music/: play.go  playlist.go  song.go
app/interface/main/user/server/http/: BUILD.bazel  banner.go  chat_message.go  comment.go  friend.go  http.go  music.go  playlist.go  song.go  user.go
app/interface/main/user/service/: banner.go  service.go  user.go
app/interface/main/user/service/chat/: friend.go  message.go  service.go
app/interface/main/user/service/music/: playlist.go  service.go  song.go  user.go
app/service/live/resource/api/grpc/: banner_resource.pb.go  banner_resource.proto  client.go  user_resource.bg.go  user_resource.pb.go  user_resource.proto
app/service/live/resource/cmd/: BUILD.bazel  main.go
app/service/live/resource/conf/: BUILD.bazel  conf.toml
app/service/live/resource/dao/: BUILD.bazel  banner_resource.go  dao.go  user_resource.go
app/service/live/resource/model/: BUILD.bazel  banner_resource.go  user_resource.go
app/service/live/resource/server/grpc/: BUILD.bazel  server.go
app/service/live/resource/service/: bannerResource.go  userResource.go
app/service/main/music/api/grpc/: client.go  friend_resource.pb.go  friend_resource.proto  message_resource.pb.go  message_resource.proto  playlist_resource.pb.go  playlist_resource.proto  song_resource.pb.go  song_resource.proto  user_resource.pb.go  user_resource.proto
app/service/main/music/cmd/: main.go
app/service/main/music/conf/: conf.go  conf.toml
app/service/main/music/dao/: dao.go  friend.go  message.go  playlist.go  song_resource.go  user.go
app/service/main/music/model/: friend.go  message.go  playlist.go  song_resource.go  user.go
app/service/main/music/server/grpc/: server.go
app/service/main/music/service/: friendResource.go  messageResource.go  playlistResource.go  songResource.go  userResource.go
