load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "near/app/live/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/live/server/http:go_default_library",
        "//library/log:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
