load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "near/app/service/live/resource/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/service/live/resource/conf:go_default_library",
        "//app/service/live/resource/server/grpc:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
