load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "near/app/service/live/resource/server/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//app/service/live/resource/api/grpc/v1:go_default_library",
        "//app/service/live/resource/conf:go_default_library",
        "//app/service/live/resource/service/v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
